<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="登录"/>
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="注册"/>
    </LinearLayout>
    <Button
        android:id="@+id/record_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_button"
        android:layout_margin="5dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <Button
        android:id="@+id/daka_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/daka_button"
            android:layout_weight="1"
            android:layout_margin="5dp"/>
        <Button
        android:id="@+id/kaoqin_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/kaoqin_button"
            android:layout_weight="1"
            android:layout_margin="5dp"/>
        <Button
        android:id="@+id/sushe_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sushe_button"
            android:layout_weight="1"
            android:layout_margin="5dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/history_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_button"
        android:layout_margin="5dp"/>
</LinearLayout>